--- a/TeamMaker/.htaccess
+++ b/TeamMaker/.htaccess
@@ -19,6 +19,8 @@ Options -Indexes
   RewriteRule ^verRespuesta$ Preguntas/verRespuestas.php [L,NC]
   RewriteRule ^anadirAlumno$ CRUDS/Alumnos/CrearAlumno.php [L,NC]
   RewriteRule ^listarAlumno$ CRUDS/Alumnos/ListarAlumnos.php [L,NC]
+  RewriteRule ^generarEquipos$ Grupos/GenerarEquipos.php [L,NC]
+  RewriteRule ^verGrupos$ Grupos/Grupos.php [L,NC]
   
   #Redirecciones desde la pagina alumno
   RewriteRule ^respondertest$ Preguntas/Test.php [L,NC]
