--- a/TeamMaker/.htaccess
+++ b/TeamMaker/.htaccess
@@ -65,6 +65,7 @@ Options -Indexes
   RewriteRule ^borrarProfesor$ CRUDS/Profesores/BorrarProfesor.php [L,NC]
   RewriteRule ^obtenerCurso$ CRUDS/Profesores/getCursos.php [L,NC]
   RewriteRule ^insertarGrupos$ Grupos/InsertarGrupos.php [L,NC]
+  RewriteRule ^verEquipos$ Grupos/VerGrupos.php [L,NC]
   
  
 </IfModule>
