--- a/TeamMaker/.htaccess
+++ b/TeamMaker/.htaccess
@@ -66,6 +66,8 @@ Options -Indexes
   RewriteRule ^obtenerCurso$ CRUDS/Profesores/getCursos.php [L,NC]
   RewriteRule ^insertarGrupos$ Grupos/InsertarGrupos.php [L,NC]
   RewriteRule ^verEquipos$ Grupos/VerGrupos.php [L,NC]
+  RewriteRule ^verMiembros$ Grupos/VerParticipantesGrupo.php [L,NC]
+  RewriteRule ^borrarGrupo$ Grupos/BorrarGrupo.php [L,NC]
   
  
 </IfModule>
